--- a/Back/ecommerce-products.html
+++ b/Back/ecommerce-products.html
@@ -615,12 +615,17 @@
                                         <h4 class="card-title mb-4">Filter</h4>
 
                                         <div>
-                                            <h5 class="font-size-14 mb-3">Clothes</h5>
+                                            <h5 class="font-size-14 mb-3">Jeux Video</h5>
                                             <ul class="list-unstyled product-list">
-                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> T-shirts</a></li>
-                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> Shirts</a></li>
-                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> Jeans</a></li>
-                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> Jackets</a></li>
+                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> Action</a></li>
+                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> Enfant</a></li>
+                                            
+                                            </ul>
+
+                                            <h5 class="font-size-14 mb-3">Accessoires</h5>
+                                            <ul class="list-unstyled product-list">
+                                                <li><a href="javascript: void(0);"><i class="mdi mdi-chevron-right me-1"></i> Audio</a></li>
+                                
                                             </ul>
                                         </div>
                                         <div class="mt-4 pt-3">
@@ -714,7 +719,7 @@
                                 <div class="row mb-3">
                                     <div class="col-xl-4 col-sm-6">
                                         <div class="mt-2">
-                                            <h5>Clothes</h5>
+                                            <h5>Jeux Video</h5>
                                         </div>
                                     </div>
                                     <div class="col-lg-8 col-sm-6">
@@ -750,7 +755,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-end mt-4">
                                                     <div>
-                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Half sleeve T-shirt </a></h5>
+                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Free Fire </a></h5>
                                                         <h5 class="my-0"><span class="text-muted me-2"><del>$500</del></span> <b>$450</b></h5>
                                                     </div>
                                                     <p class="text-muted mb-0">
@@ -772,7 +777,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-end mt-4">
                                                     <div>
-                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Light blue T-shirt</a></h5>
+                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Assassin's Creed</a></h5>
                                                         <h5 class="my-0"><span class="text-muted me-2"><del>$240</del></span> <b>$225</b></h5>
                                                     </div>
                                                     <p class="text-muted mb-0">
@@ -797,7 +802,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-end mt-4">
                                                     <div>
-                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Black Color T-shirt</a></h5>
+                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Asphalt 9</a></h5>
                                                         <h5 class="my-0"><span class="text-muted me-2"><del>$175</del></span> <b>$152</b></h5>
                                                     </div>
                                                     <p class="text-muted mb-0">
@@ -819,7 +824,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-end mt-4">
                                                     <div>
-                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Hoodie (Blue)</a></h5>
+                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">PubG</a></h5>
                                                         <h5 class="my-0"><span class="text-muted me-2"><del>$150</del></span> <b>$145</b></h5>
                                                     </div>
                                                     <p class="text-muted mb-0">
@@ -844,7 +849,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-end mt-4">
                                                     <div>
-                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Half sleeve T-Shirt</a></h5>
+                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Super Mario</a></h5>
                                                         <h5 class="my-0"><span class="text-muted me-2"><del>$145</del></span> <b>$138</b></h5>
                                                     </div>
                                                     <p class="text-muted mb-0">
@@ -870,7 +875,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-between align-items-end mt-4">
                                                     <div>
-                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">Green color T-shirt</a></h5>
+                                                        <h5 class="mb-3 text-truncate"><a href="javascript: void(0);" class="text-dark">League of legends</a></h5>
                                                         <h5 class="my-0"><span class="text-muted me-2"><del>$138</del></span> <b>$135</b></h5>
                                                     </div>
 
