--- a/Front/checkout.html
+++ b/Front/checkout.html
@@ -41,7 +41,7 @@
 							</button>
 
 							<a href="index.html" class="header__logo">
-								<img src="img/logo.svg" alt="">
+								<img src="img/logo.png" alt="">
 							</a>
 
 							<ul class="header__nav">
@@ -330,7 +330,7 @@
 				<div class="col-12">
 					<div class="footer__navs">
 						<div class="footer__nav footer__nav--1">
-							<div class="footer__title"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><polygon points='336 320 32 320 184 48 336 320' style='fill:none;stroke-linejoin:round;stroke-width:32px'/><path d='M265.32,194.51A144,144,0,1,1,192,320' style='fill:none;stroke-linejoin:round;stroke-width:32px'/></svg> <span>GG.template</span></div>
+							<div class="footer__title"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><polygon points='336 320 32 320 184 48 336 320' style='fill:none;stroke-linejoin:round;stroke-width:32px'/><path d='M265.32,194.51A144,144,0,1,1,192,320' style='fill:none;stroke-linejoin:round;stroke-width:32px'/></svg> <span>GoGames</span></div>
 
 							<nav class="footer__list">
 								<a href="about.html">About Us</a>
@@ -366,7 +366,7 @@
 
 							<nav class="footer__list">
 								<a href="#">Affiliate program</a>
-								<a href="#">Selling on GG.template</a>
+								<a href="#">Selling on GoGames</a>
 								<a href="#">Terms and conditions</a>
 								<a href="#">Privacy policy</a>
 								<a href="#">Marketing Partnership</a>
@@ -374,7 +374,7 @@
 
 							<div class="footer__contacts">
 								<a class="footer__link" href="tel:+18092345678">+1 809 234-56-78</a>
-								<a class="footer__link" href="mailto:support@gg.template">support@gg.template</a>
+								<a class="footer__link" href="mailto:support@GoGames.tn">support@GoGames.tn</a>
 
 								<div class="footer__social">
 									<a class="fb" href="#"><svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 512 512'><path d='M455.27,32H56.73A24.74,24.74,0,0,0,32,56.73V455.27A24.74,24.74,0,0,0,56.73,480H256V304H202.45V240H256V189c0-57.86,40.13-89.36,91.82-89.36,24.73,0,51.33,1.86,57.51,2.68v60.43H364.15c-28.12,0-33.48,13.3-33.48,32.9V240h67l-8.75,64H330.67V480h124.6A24.74,24.74,0,0,0,480,455.27V56.73A24.74,24.74,0,0,0,455.27,32Z'/></svg></a>
@@ -391,10 +391,10 @@
 				<div class="col-12">
 					<div class="footer__wrap">
 						<a class="footer__logo" href="index.html">
-							<img src="img/logo.svg" alt="">
+							<img src="img/logo.png" alt="">
 						</a>
 
-						<span class="footer__copyright">© GG.template, 2020—2021 <br> Create by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a></span>
+						<span class="footer__copyright">© GoGames, 2020—2021 <br> Create by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a></span>
 					</div>
 				</div>
 			</div>
